tests/snapshots/assets__check_file@tests-assets-unit-comment-comment-in-dict.typ-80.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/comment/comment-in-dict.typ
---
#(
  :
  // empty dict
)

#(
  a: 1 /* comment */, // another comment
  b /* comment */: 2,
  /* comment */ c: 3,
)
