tests/snapshots/assets__check_file@tests-assets-unit-comment-comment-in-for.typ-40.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/comment/comment-in-for.typ
---
#{
  for /* test */ i in "123" { }
  for i /* test */ in "123" { }
  for i in /* test */ "123" { }
  for i in "123" /* test */ { }
}
